ingress nginx external authentication/auth-test/auth-client-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  auth-client
  namespace: default
  labels:
    app:  auth-client
spec:
  selector:
    matchLabels:
      app: auth-client
  replicas: 1
  template:
    metadata:
      labels:
        app:  auth-client
    spec:
      containers:
      - name:  auth-client
        image: itmagician/vuddy:auth-client-test
        ports:
        - containerPort:  8080
---
apiVersion: v1
kind: Service
metadata:
  name: auth-client-svc
  namespace: default
spec:
  selector:
    app: auth-client
  # type: ClusterIP
  type: LoadBalancer
  ports:
  - name: auth-client-svc
    protocol: TCP
    port: 80
    targetPort: 8080
