ingress nginx external authentication/auth-test/auth-server-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  auth-server
  namespace: default
  labels:
    app:  auth-server
spec:
  selector:
    matchLabels:
      app: auth-server
  replicas: 1
  template:
    metadata:
      labels:
        app:  auth-server
    spec:
      containers:
      - name:  auth-server
        image:  itmagician/vuddy:auth-server-test
        ports:
        - containerPort:  8080

---
apiVersion: v1
kind: Service
metadata:
  name: auth-server-svc
  namespace: default
spec:
  selector:
    app: auth-server
  type: LoadBalancer
  ports:
  - name: auth-server-svc
    protocol: TCP
    port: 80
    targetPort: 8080
