ingress nginx external authentication/auth-test/ingress.yml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-test-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx" # 사용할 Ingress Controller
    nginx.ingress.kubernetes.io/auth-url: http://auth-server-svc.default.svc.cluster.local/auth
    nginx.ingress.kubernetes.io/auth-response-headers: x-forwarded-for-user-id, x-forwarded-for-password
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: auth-client-svc
            port:
              number: 80
